# heraclitus

./: CLAUDE.md  CONTRIBUTING.md  DEV_GUIDE.md  README.md  ROADMAP.md  pyproject.toml
docs/: index.md  machine_learning_guide.md
docs/tutorials/: basic_process_analysis.ipynb
examples/: basic_usage.py  duckdb_large_datasets.py  interactive_visualization.py  machine_learning.py  process_discovery.py  statistical_analysis.py  xes_format.py
heraclitus/: __init__.py  heraclitus.py
heraclitus/data/: __init__.py  duckdb_connector.py  event_log.py  xes_handler.py
heraclitus/discovery/: __init__.py  process_discovery.py
heraclitus/metrics/: __init__.py  time_metrics.py
heraclitus/ml/: __init__.py  anomaly_detection.py  feature_engineering.py  prediction.py
heraclitus/statistics/: __init__.py  comparison.py
heraclitus/utils/: pm4py_converter.py
heraclitus/visualization/: __init__.py  interactive.py  pm4py_viz.py  process_map.py
tests/: test_event_log.py  test_metrics.py  test_ml.py  test_statistics.py
