[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heraclitus"
version = "0.3.0"
description = "Process Mining library aimed at making PM accessible to new users"
readme = "README.md"
requires-python = ">=3.10, <3.13"
license = {text = "MIT"}
authors = [
    {name = "Heraclitus Contributors"}
]
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.4.0",
    "matplotlib>=3.5.0",
    "scipy>=1.8.0",
    "plotly>=5.10.0",
    "duckdb>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
]
pm4py = [
    "pm4py>=2.2.0",
]
ml = [
    "scikit-learn>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true